# muscles-ai

./: README.md  pyproject.toml
docs/: model-gateway.md  model-gateway.ru.md  rag-toolkit.md  telemetry.md
examples/: run_ai_configured.py  run_ai_smoke.py
src/muscles_ai/: __init__.py  actions.py  config.py  contracts.py  gateway.py  memory.py  models.py  package.py  pipeline.py  ports.py  runtime.py
src/muscles_ai/providers/: __init__.py  llama_cpp.py  openai.py
tests/: test_init.py  test_model_gateway.py  test_packaging.py  test_rag_toolkit.py  test_telemetry.py
